# brain

./: CLAUDE.md  pyproject.toml  ship-1-design.md
src/brain/: chunker.py  cli.py  embed.py  ingest.py  parsers.py  qa.py  search.py  storage.py
tests/: test_chunker.py  test_cli.py  test_embed.py  test_ingest.py  test_parsers.py  test_qa.py  test_search.py  test_storage.py
